@@ -2,6 +2,7 @@ Kiwix 0.9 beta2
 * Regression fix, tabs should not be visible per default
 * Fixed deprecated tmp.kiwix.org/zim links in help files (ID: 3376641)
 * Now able to load on GNU/Linux with the command line ZIM files with " " in their path
+* Add menuitem File > Browse Library (ID: 3377139)
 
 Kiwix 0.9 beta1
 * Remove a hard coded path in kiwix-compact.sh (ID: 3135956)
